manifests/uat/deploy-re.yaml
#manifests/uat/deploy-re.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deploy
  namespace: uat
  labels:
    app: redisuat
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: redisuat
  template:
    metadata:
      labels:
        app: redisuat
    spec:
      containers:
        - name: redis
          image: redis:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 6379
          resources:
            limits:
              cpu: "2"
              memory: "1Gi"
            requests:
              cpu: "0.5"
              memory: "256Mi"
      imagePullSecrets:
        - name: my-registry-secret
      volumes:
        - name: redis-file
          persistentVolumeClaim:
            claimName: redis-pvc-uat
